--- a/buszy/art.html
+++ b/buszy/art.html
@@ -337,13 +337,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="abs.html" class="nav-link active">
+                    <a href="abs.html" class="nav-link">
                         <i class="fa-solid fa-magnifying-glass"></i>
                         <span>Search</span>
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a href="menu.html" class="nav-link">
+                    <a href="menu.html" class="nav-link active">
                         <i class="fa-solid fa-bars"></i>
                         <span>Menu</span>
                     </a>
