--- a/buszy/tsa.html
+++ b/buszy/tsa.html
@@ -138,7 +138,7 @@
                     </a>
                 </li>
                 <li class="breadcrumb-item">
-                    <a href="abs.html"><i class="fa-solid fa-magnifying-glass"></i>
+                    <a href="abs.html"><i class="fa-solid fa-bars"></i>
                     </a>
                 </li>
             </ol>
@@ -201,7 +201,7 @@
                     <span class="label">Nearby</span>
                 </a>
             </li>
-            <li class="active">
+            <li>
                 <a href="abs.html">
                     <span class="icon">
                         <i class="fa-solid fa-magnifying-glass"></i>
@@ -209,7 +209,7 @@
                     <span class="label">Search</span>
                 </a>
             </li>
-            <li>
+            <li class="active">
                 <a href="menu.html">
                     <span class="icon">
                         <i class="fa-solid fa-bars"></i>
