--- a/buszy/tsa.html
+++ b/buszy/tsa.html
@@ -283,13 +283,19 @@
             <div class='alert-last-updated' style='margin-top:12px;font-size:0.98em;color:#888;'></div>
             <li class="custom-list-item">
                 <span class="line-label nsl">NSL</span>
-                <span class="line-name">North South Line</span>
+                <span class="line-name">North-South Line</span>
                 <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
             </li>
             <hr>
             <li class="custom-list-item">
                 <span class="line-label ewl">EWL</span>
-                <span class="line-name">East West Line</span>
+                <span class="line-name">East-West Line</span>
+                <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
+            </li>
+            <hr>
+            <li class="custom-list-item">
+                <span class="line-label nel">NEL</span>
+                <span class="line-name">North East Line</span>
                 <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
             </li>
             <hr>
@@ -308,12 +314,6 @@
             <li class="custom-list-item">
                 <span class="line-label tel">TEL</span>
                 <span class="line-name">Thomson-East Coast Line</span>
-                <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
-            </li>
-            <hr>
-            <li class="custom-list-item">
-                <span class="line-label nel">NEL</span>
-                <span class="line-name">North East Line</span>
                 <span class="status-icon pulse"><i class="fa-solid fa-check"></i></span>
             </li>
             <hr>
