2026-02 EOL Update for Buszy V3.0

--- a/buszy/settings.html
+++ b/buszy/settings.html
@@ -278,6 +278,10 @@
                     <button id="clear-cache-btn" class="btn btn-rfetch">Re-fetch data</button><br>
                     <p class="fetch">Clear cached bus stop data to ensure you have the latest information.</p>
                 </li>
+                <li class="list-group-item">
+                    <button id="export-storage-btn" class="btn btn-rfetch">Export Storage</button><br>
+                    <p class="fetch">Download all your saved settings and preferences as a JSON file.</p>
+                </li>
             </ul>
 
             <h2 class="text-center" style="padding-top: 1em;">Install</h2>
