--- a/buszy.html
+++ b/buszy.html
@@ -239,7 +239,7 @@
                 style="font-weight: bold; font-size: 1.1em; border: 2px solid #ffd700; z-index: 9999; position: relative;">
                 <i class="fa-solid fa-bullhorn me-2" aria-hidden="true"></i>
                 We'll be moving to the new <a href="https://worksbynrfz.com" class="alert-link"
-                    style="font-weight: bold;">worksbynrfz.com</a> site in March 2026!
+                    style="font-weight: bold;">worksbynrfz.com</a> site in March 2026! Migrate your data through <a href="buszy/settings.html" class="alert-link" style="font-weight: bold;">Settings</a>.
             </div>
             <!-- Section Contents -->
             <section class="about-me-summ clearfix" style="padding-bottom: 5em;">
