--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 
 <style>
-   
+
 
 
 
@@ -171,31 +171,34 @@
                 </div>
                 <div class="wbnrfz-grid wow fadeIn" data-wow-delay="300ms">
                     <div class="card">
-                        <img src="https://i.imgur.com/TBlQxOJ.png" alt="Work 1">
+                        <img src="https://i.imgur.com/fekfd0k.png" alt="Work 1">
                         <div class="card-content">
                             <h3>Buszy - Bus Arrival Timings</h3>
-                            <a href="buszy.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
+                            <a href="https://worksbynrfz.com/buszy" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="https://i.imgur.com/HaCQ71l.png" alt="Work 2">
+                        <img src="https://i.imgur.com/498xWqm.png" alt="Work 2">
+                        <div class="card-content">
+                            <h3>RailBuddy - Stay on track, always</h3>
+                            <a href="https://worksbynrfz.com/rail-buddy"
+                                class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="https://i.imgur.com/HaCQ71l.png" alt="Work 3">
                         <div class="card-content">
                             <h3>EICW - Implementation Brainstorming</h3>
-                            <a href="eicw/eicw.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="https://i.imgur.com/Dlkjslp.png" alt="Work 3">
-                        <div class="card-content">
-                            <h3>Train Delays Tracker</h3>
-                            <a href="https://nurafianzulkifli.github.io/train-delays-checker/" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
+                            <a href="eicw/eicw.html" class="pw-btn-small btn-2"><i
+                                    class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
                     <div class="card">
                         <img src="https://i.imgur.com/IeRTJiV.png" alt="Work 4">
                         <div class="card-content">
                             <h3>LTA Bus Stop Pole Design Refresh</h3>
-                            <a href="worksbynrfz/lta-bp.html" class="pw-btn-small btn-2"><i class="fa-solid fa-arrow-right"></i></a>
+                            <a href="worksbynrfz/lta-bp.html" class="pw-btn-small btn-2"><i
+                                    class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
